Cleanup, add apps page

--- a/public/apps/Index.html
+++ b/public/apps/Index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Website for Resounding Software. We build resounding success." />
     <meta name="keywords" content="Software Development,Resounding Software" />
 
-    <title>Resounding Software Homepage</title>
+    <title>Canal Route, by Resounding Software</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -156,7 +156,7 @@
     {
         background-position: -400px 0;
     }
-    .canal-route .labels .hover
+    .canal-route .labels a:hover .img
     {
         background-position: -600px 0;
     }
@@ -164,7 +164,7 @@
     {
         background-position: 0 0;
     }
-    .canal-route .icons .hover
+    .canal-route .icons a:hover .img
     {
         background-position: -200px 0;
     }
@@ -288,68 +288,68 @@
 <body>
 
     <div class="container">
-        <div class="page-header" itemscope itemtype="http://data-vocabulary.org/Organization">
-            <h1><span itemprop="name">Resounding Software</span> <small itemprop="description">Building software for your business.</small></h1>
-        </div>
-        <div class="row menu">
+        <div class="row menu hidden-phone">
             <div class="span4">
-                <a href="http://resoundingsoftware.wordpress.com"><i class="icon-white icon-book"></i> Visit our Blog</a>
+                <a href="../"><i class="icon-white icon-home"></i> Home</a>
             </div>
             <div class="span4">
-                <a href="/apps"><i class="icon-white icon-shopping-cart"></i> See our Apps</a>
+                <a href="http://resoundingsoftware.wordpress.com"><i class="icon-white icon-book"></i> Visit our Blog</a>
             </div>
             <div class="span4">
                 <a href="mailto:cliffe@resounding.ca"><i class="icon-white icon-envelope"></i> Contact Us</a>
             </div>
         </div>
-        <div class="row-fluid links">
-            <div class="span4 devices">
-                <a href="#devices">
-                    <div class="img"></div>
-                    <h1>Devices</h1>
+        <div class="page-header" itemscope itemtype="http://data-vocabulary.org/Product">
+            <h1>
+                <span itemprop="name">Canal Route</span>
+                <small itemprop="description">Bridge status Android app for the Welland Canal.</small>
+                <a href="https://play.google.com/store/apps/details?id=ch.android">
+                    <img src="../img/google-play-sm.png" alt="Get it now at Google play" />
                 </a>
-            </div>
-            <div class="span4 processes">
-                <a href="#processes">
+            </h1>
+            <div class="hide">Only <span itemprop="price">$0.99</span> at Google play.</div>
+        </div>
+
+        <section id="labels">
+            <h1>See What's Up</h1>
+            <p class="lead">Canal Route shows you the status of the lift bridges along the Welland Canal.</p>
+        </section>
+
+        <div class="row canal-route">
+            <div class="span10 offset2 icons">
+                <a href="https://play.google.com/store/apps/details?id=ch.android">
                     <div class="img"></div>
-                    <h1>Processes</h1>
-                </a>
-            </div>
-            <div class="span4 performance">
-                <a href="#performance">
-                    <div class="img"></div>
-                    <h1>Performance</h1>
                 </a>
             </div>
         </div>
 
-        <section id="devices">
-            <h1>Devices</h1>
-            <p class="lead">Smartphones & tablets are everywhere today.</p>
-            <p>Are you just coping with that fact, or are you using it to your advantage?
-            We'll help you ensure that your internal and public-facing websites both look good
-            and work well on mobile devices and tablets, giving you a real competitive advantage.</p>
+        <section id="icons">
+            <h1>Plan Your Route</h1>
+            <p class="lead">You can see which bridges are up and which are down, and plan accordingly.</p>
         </section>
 
-        <section id="processes">
-            <h1>Processes</h1>
-            <p class="lead">Sometimes it's the little things that hurt you.</p>
-            <p>Like manual processes that eat away at your time and money, killing your productivity. Things like:</p>
-            <ul>
-                <li>Sending out packages and documents in the courier.</li>
-                <li>Approving purchases for non-production items.</li>
-                <li>Matching up Work Orders with the work one (and billing for it!).</li>
-            </ul>
-            <p>We can help you streamline and automate these types of processes. You'll reduce
-            labour, save paper and increase reportability.</p>
-        </section>
+        <div class="row canal-route">
+            <div class="span5 offset1 labels">
+                <a href="https://play.google.com/store/apps/details?id=ch.android">
+                    <div class="img"></div>
+                </a>
+            </div>
+        </div>
 
-        <section id="performance">
-            <h1>Performance</h1>
-            <p class="lead">Offline access, the Realtime Web, Social Media...</p>
-            <p>The Internet moves quickly. We're up to date with the latest trends and techniques that
-            will ensure your sites perform well and utilize the best that the web has to offer.</p>
-        </section>
+        <div class="row menu visible-phone">
+            <div class="span3">
+                <a href="http://www.resounding.ca"><i class="icon-white icon-home"></i> Home</a>
+            </div>
+            <div class="span3">
+                <a href="http://resoundingsoftware.wordpress.com"><i class="icon-white icon-book"></i> Visit our Blog</a>
+            </div>
+            <div class="span3">
+                <a href="http://tourney.resounding.ca"><i class="icon-white icon-road"></i> Take a Tour</a>
+            </div>
+            <div class="span3">
+                <a href="mailto:cliffe@resounding.ca"><i class="icon-white icon-envelope"></i> Contact Us</a>
+            </div>
+        </div>
 
         <footer>
             <p>
