Fix link to apps

--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,7 @@
                 <a href="http://resoundingsoftware.wordpress.com"><i class="icon-white icon-book"></i> Visit our Blog</a>
             </div>
             <div class="span4">
-                <a href="/apps"><i class="icon-white icon-shopping-cart"></i> See our Apps</a>
+                <a href="/apps/Index.html"><i class="icon-white icon-shopping-cart"></i> See our Apps</a>
             </div>
             <div class="span4">
                 <a href="mailto:cliffe@resounding.ca"><i class="icon-white icon-envelope"></i> Contact Us</a>
