Add app cache manifest

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html manifest='/app.manifest'>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -296,7 +296,7 @@
                 <a href="http://resoundingsoftware.wordpress.com"><i class="icon-white icon-book"></i> Visit our Blog</a>
             </div>
             <div class="span4">
-                <a href="/apps/Index.html"><i class="icon-white icon-shopping-cart"></i> See our Apps</a>
+                <a href="/apps/index.html"><i class="icon-white icon-shopping-cart"></i> See our Apps</a>
             </div>
             <div class="span4">
                 <a href="mailto:cliffe@resounding.ca"><i class="icon-white icon-envelope"></i> Contact Us</a>
