fix copyright sign

--- a/public/index.html
+++ b/public/index.html
@@ -353,7 +353,7 @@
 
         <footer>
             <p>
-                Copyright (c) 2014 Resounding Software
+                Copyright &copy; 2014 Resounding Software
                 <a href="mailto:cliffe@resounding.ca">cliffe@resounding.ca</a>
             </p>
         </footer>
