--- a/public/index.html
+++ b/public/index.html
@@ -338,7 +338,7 @@
             <ul>
                 <li>Sending out packages and documents in the courier.</li>
                 <li>Approving purchases for non-production items.</li>
-                <li>Matching up Work Orders with the work one (and billing for it!).</li>
+                <li>Matching up Work Orders with the work done (and billing for it!).</li>
             </ul>
             <p>We can help you streamline and automate these types of processes. You'll reduce
             labour, save paper and increase reportability.</p>
