Remove link to blog, add link to LinkedIn

--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,9 @@
         </div>
         <div class="row menu">
             <div class="span4">
-                <a href="http://resoundingsoftware.wordpress.com"><i class="icon-white icon-book"></i> Visit our Blog</a>
+                <a href="http://ca.linkedin.com/in/cliffeh">
+                <img src="img/LinkedIn-Logo-2CRev.png" alt="Linked In" height="20px">
+                </a>
             </div>
             <div class="span4">
                 <a href="/apps/index.html"><i class="icon-white icon-shopping-cart"></i> See our Apps</a>
