Fix image height

--- a/public/index.html
+++ b/public/index.html
@@ -293,7 +293,7 @@
         <div class="row menu">
             <div class="span4">
                 <a href="http://ca.linkedin.com/in/cliffeh">
-                <img src="img/LinkedIn-Logo-2CRev.png" alt="Linked In" height="20px">
+                <img src="img/LinkedIn-Logo-2CRev.png" alt="Linked In" style="height: 20px;">
                 </a>
             </div>
             <div class="span4">
