--- a/app/index.html
+++ b/app/index.html
@@ -2,16 +2,20 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>www resounding ca</title>
+    <title>Resounding Software</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="bower_components/skel/dist/skel.css" />
+    <link rel="stylesheet" href="bower_components/skel/dist/skel.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style-desktop.css">
+    <link rel="stylesheet" href="styles/style-noscript.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -35,100 +39,75 @@
                       <!-- Me -->
                           <article id="me" class="panel">
                               <header>
-                                  <h1>Jane Doe</h1>
-                                  <p>Senior Astral Projectionist</p>
+                                  <h1>Resounding Software</h1>
+                                  <p>Building software for your business</p>
                               </header>
+
                               <a href="#work" class="jumplink pic">
-                                  <span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+                                  <span class="arrow icon fa-chevron-right">
+                                    <span>Work</span>
+                                  </span>
                               </a>
                           </article>
 
                       <!-- Work -->
                           <article id="work" class="panel">
                               <header>
-                                  <h2>Work</h2>
+                                  <h2>What we do</h2>
                               </header>
-                              <p>
-                                  Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-                                  Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                                  luctus elit eget interdum.
-                              </p>
+                              
                               <section>
-                                  <div class="row">
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-                                      </div>
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-                                      </div>
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-                                      </div>
-                                  </div>
-                                  <div class="row">
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-                                      </div>
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-                                      </div>
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-                                      </div>
-                                  </div>
-                                  <div class="row">
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-                                      </div>
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-                                      </div>
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-                                      </div>
-                                  </div>
-                                  <div class="row">
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-                                      </div>
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-                                      </div>
-                                      <div class="4u">
-                                          <a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-                                      </div>
-                                  </div>
+                                  <ul class="row">
+                                      <li class="6u">
+                                          Web Sites
+                                      </li>
+                                      <li class="6u">
+                                          Mobile Apps
+                                      </li>
+                                      <li class="6u">
+                                          Integration with existing systems
+                                      </li>
+                                      <li class="6u">
+                                          Automation of manual &amp; paper processes
+                                      </li>
+                                  </ul>
                               </section>
+
+                              <a href="#contact" class="jumplink pic">
+                                  <span class="arrow icon fa-chevron-right">
+                                    <span>Contact</span>
+                                  </span>
+                              </a>
                           </article>
 
                       <!-- Contact -->
                           <article id="contact" class="panel">
                               <header>
-                                  <h2>Contact Me</h2>
+                                  <h2>Contact us</h2>
                               </header>
                               <form action="#" method="post">
                                   <div>
                                       <div class="row">
                                           <div class="6u">
-                                              <input type="text" name="name" placeholder="Name" />
+                                              <input type="text" name="name" placeholder="Name" required>
                                           </div>
                                           <div class="6u">
-                                              <input type="text" name="email" placeholder="Email" />
+                                              <input type="email" name="email" placeholder="Email">
                                           </div>
                                       </div>
                                       <div class="row">
                                           <div class="12u">
-                                              <input type="text" name="subject" placeholder="Subject" />
+                                              <input type="text" name="subject" placeholder="Subject">
                                           </div>
                                       </div>
                                       <div class="row">
                                           <div class="12u">
-                                              <textarea name="message" placeholder="Message" rows="8"></textarea>
+                                              <textarea name="message" placeholder="Message" rows="3"></textarea>
                                           </div>
                                       </div>
                                       <div class="row">
                                           <div class="12u">
-                                              <input type="submit" value="Send Message" />
+                                              <input type="submit" value="Send Message">
                                           </div>
                                       </div>
                                   </div>
@@ -140,7 +119,7 @@
               <!-- Footer -->
                   <div id="footer">
                       <ul class="copyright">
-                          <li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                          <li>&copy; 2014 Resounding Software.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                       </ul>
                   </div>
 
@@ -150,7 +129,7 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/skel/src/skel.js"></script>
+    <script src="bower_components/skel/dist/skel.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
